--- a/package.json
+++ b/package.json
@@ -18,14 +18,26 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.6.0",
+    "@stylistic/eslint-plugin": "latest",
+    "@types/node": "latest",
+    "@types/obsidian-typings": "github:Fevol/obsidian-typings",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "builtin-modules": "latest",
+    "esbuild": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-xo": "^0.27.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-import-resolver-typescript": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-modules-newlines": "latest",
+    "eslint-plugin-prettier": "^3.4.1",
+    "globals": "latest",
     "husky": "^3.0.9",
     "jest": "^26.1.0",
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
+    "tsx": "latest",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.7.0"
   },
@@ -55,26 +67,11 @@
       "pre-commit": "lint-staged"
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "xo",
-      "prettier"
-    ],
-    "env": {
-      "jest": true,
-      "node": true
-    },
-    "rules": {
-      "prettier/prettier": "error"
-    },
-    "plugins": [
-      "prettier"
-    ]
-  },
   "scripts": {
     "pretest": "eslint .",
     "test": "jest"
   },
   "repository": "mnaoumov/generator-obsidian-plugin",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
