Switch to TypeScript eslint and strictest compilation

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "<%= pluginDescription %>",
   "scripts": {
-    "build": "tsx esbuild.config.ts production",
-    "dev": "tsx esbuild.config.ts",
+    "build": "tsc --build && tsx esbuild.config.ts production",
+    "dev": "tsc --build && tsx esbuild.config.ts",
     "lint": "eslint . --fix",
-    "version": "tsx version-bump.ts && git add manifest.json versions.json"
+    "version": "tsx version-bump.ts && git add manifest.json package.json versions.json"
   },
   "keywords": [],
   "author": "<%= authorGitHubName %>",
   "license": "MIT",
   "devDependencies": {
     "@stylistic/eslint-plugin": "latest",
+    "@tsconfig/strictest": "latest",
+    "@types/eslint": "latest",
     "@types/node": "latest",
     "@types/obsidian-typings": "github:Fevol/obsidian-typings",
     "@typescript-eslint/eslint-plugin": "latest",
@@ -23,6 +25,7 @@
     "eslint-import-resolver-typescript": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-modules-newlines": "latest",
+    "eslint-ts-patch": "latest",
     "globals": "latest",
     "obsidian": "latest",
     "tsx": "latest"
