--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
+  "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
@@ -7,23 +9,19 @@
     "importHelpers": true,
     "inlineSourceMap": true,
     "inlineSources": true,
-    "isolatedModules": true,
     "lib": [
       "DOM",
-      "ES5",
-      "ES6",
-      "ES7"
+      "ESNext"
     ],
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "noEmit": false,
-    "noImplicitAny": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "strictNullChecks": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "noEmit": true,
     "target": "ESNext",
   },
   "include": [
-    "generators/app/index.ts"
+    "**/*.ts"
+  ],
+  "exclude": [
+    "**/templates/**"
   ]
 }
