--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "yosay": "latest"
   },
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc --build tsconfig.build.json",
     "lint": "eslint-ts . --fix"
   },
   "repository": {
