--- a/generators/app/templates/.github/workflows/release.yml
+++ b/generators/app/templates/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - "*"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -28,6 +29,7 @@ jobs:
         run: |
           tag="${GITHUB_REF#refs/tags/}"
 
+          cd dist/build
           gh release create "$tag" \
             --title="$tag" \
             --draft \
