Check Node.js version from the generator itself

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "chalk": "latest",
+    "semver": "latest",
     "yeoman-generator": "latest",
     "yosay": "latest"
   },
