--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tsconfig/strictest": "^2.0.5",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.9",
+    "@types/semver": "^7.5.8",
     "@types/yeoman-generator": "^5.2.14",
     "@types/yosay": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
