--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "builtin-modules": "^4.0.0",
+    "cspell": "^8.10.4",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
@@ -47,6 +48,7 @@
     "lint": "tsx scripts/npmScriptExecutor.ts lint",
     "postversion": "tsx scripts/npmScriptExecutor.ts postversion",
     "preversion": "tsx scripts/npmScriptExecutor.ts preversion",
+    "spellcheck": "tsx scripts/npmScriptExecutor.ts spellcheck",
     "version": "tsx scripts/npmScriptExecutor.ts version"
   },
   "repository": {
