--- a/package.json
+++ b/package.json
@@ -18,38 +18,26 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.3.0",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.9",
     "@types/semver": "^7.5.8",
-    "@types/vinyl": "^2.0.12",
-    "@types/yeoman-generator": "^5.2.14",
     "@types/yosay": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "builtin-modules": "^4.0.0",
-    "cspell": "^8.10.4",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-modules-newlines": "^0.0.7",
-    "globals": "^15.8.0",
-    "tsx": "^4.16.2"
+    "esbuild": "^0.23.1",
+    "npm-run-all": "^4.1.5",
+    "tsx": "^4.17.0"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "semver": "^6.3.1",
-    "yeoman-generator": "^7.1.1",
+    "chalk": "^5.3.0",
+    "obsidian-dev-utils": "^1.4.0",
+    "semver": "^7.6.3",
+    "yeoman-generator": "^7.3.2",
     "yosay": "^3.0.0"
   },
   "scripts": {
-    "build": "tsx scripts/npmScriptExecutor.ts build",
-    "lint": "tsx scripts/npmScriptExecutor.ts lint",
-    "postversion": "tsx scripts/npmScriptExecutor.ts postversion",
-    "preversion": "tsx scripts/npmScriptExecutor.ts preversion",
-    "spellcheck": "tsx scripts/npmScriptExecutor.ts spellcheck",
-    "version": "tsx scripts/npmScriptExecutor.ts version"
+    "build": "tsx scripts/build.ts",
+    "lint": "obsidian-dev-utils lint",
+    "lint:fix": "obsidian-dev-utils lint:fix",
+    "spellcheck": "obsidian-dev-utils spellcheck",
+    "version": "obsidian-dev-utils version"
   },
   "repository": {
     "type": "git",
