--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -4,6 +4,7 @@
   "description": "<%= pluginDescription %>",
   "scripts": {
     "build": "obsidian-dev-utils build",
+    "build:validate": "obsidian-dev-utils build:validate",
     "dev": "obsidian-dev-utils dev",
     "lint": "obsidian-dev-utils lint",
     "lint:fix": "obsidian-dev-utils lint:fix",
@@ -16,8 +17,8 @@
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
     "obsidian": "^1.6.6",
-    "obsidian-dev-utils": "^3.25.0",
-    "obsidian-typings": "^2.2.1-beta.15"
+    "obsidian-dev-utils": "^3.29.0",
+    "obsidian-typings": "^2.2.1-beta.18"
   },
   "type": "module"
 }
