--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "@types/json-schema": "^7.0.15",
     "@types/semver": "^7.5.8",
     "@types/yosay": "^2.0.3",
-    "esbuild": "^0.23.1",
+    "esbuild": "^0.24.0",
     "npm-run-all": "^4.1.5",
-    "obsidian-dev-utils": "^3.29.0",
-    "tsx": "^4.19.0"
+    "obsidian-dev-utils": "^3.36.2",
+    "tsx": "^4.19.1"
   },
   "dependencies": {
     "chalk": "^5.3.0",
     "semver": "^7.6.3",
-    "yeoman-generator": "^7.3.2",
+    "yeoman-generator": "^7.3.3",
     "yosay": "^3.0.0"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "tsx scripts/build.ts",
     "lint": "obsidian-dev-utils lint",
     "lint:fix": "obsidian-dev-utils lint:fix",
     "spellcheck": "obsidian-dev-utils spellcheck",
