--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
+    "@types/node": "^22.7.6",
     "obsidian": "^1.7.2",
     "obsidian-dev-utils": "^3.36.4",
     "obsidian-typings": "^2.2.1-beta.33"
