--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/yosay": "^2.0.3",
     "esbuild": "^0.24.0",
     "npm-run-all": "^4.1.5",
-    "obsidian-dev-utils": "^3.36.4",
+    "obsidian-dev-utils": "^3.39.0",
+    "obsidian-typings": "^2.2.1-beta.34",
     "tsx": "^4.19.1"
   },
   "dependencies": {
