--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "latest-version": "^9.0.0",
     "semver": "^7.6.3",
     "yeoman-generator": "^7.3.3",
     "yosay": "^3.0.0"
