--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -42,7 +42,7 @@ body:
       label: Attachments
       description: Required for feature investigation
       value: |
-        - Please attach a video showing the current behavior
+        - Please attach a video showing the current behavior. It is not mandatory, but might be very helpful to speed up the feature implementation
     validations:
       required: true
   - type: checkboxes
@@ -50,9 +50,9 @@ body:
       label: Confirmations
       description: Ensure the following conditions are met
       options:
-        - label: I attached a video showing the current behavior
+        - label: I attached a video showing the current behavior, or it is not necessary
           required: true
-        - label: I have tested the issue with the latest version
+        - label: I have tested the absence of the requested feature with the latest version of the generator
           required: true
-        - label: I have checked for existing Feature Requests
+        - label: I have checked GitHub for existing Feature Requests
           required: true
