--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@tsconfig/strictest": "^2.0.5",
     "@types/debug": "^4.1.12",
     "@types/json-schema": "^7.0.15",
+    "@types/module-alias": "^2.0.4",
     "@types/semver": "^7.5.8",
     "@types/yosay": "^2.0.3",
     "esbuild": "^0.24.2",
     "npm-run-all": "^4.1.5",
     "obsidian-dev-utils": "^13.15.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "whatwg-url": "^14.1.0"
   },
   "dependencies": {
     "chalk": "^5.4.1",
+    "clone-stats-node22": "^1.0.1",
     "latest-version": "^9.0.0",
+    "module-alias": "^2.2.3",
     "semver": "^7.6.3",
     "yeoman-generator": "^7.4.0",
     "yosay": "^3.0.0"
