--- a/package.json
+++ b/package.json
@@ -29,19 +29,24 @@
     "@types/semver": "^7.5.8",
     "@types/yosay": "^2.0.3",
     "esbuild": "^0.24.2",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "obsidian-dev-utils": "^13.15.0",
     "tsx": "^4.19.2"
   },
   "dependencies": {
+    "@octokit/core": "^6.1.3",
+    "@octokit/request": "^9.1.4",
+    "@octokit/rest": "^21.1.0",
     "chalk": "^5.4.1",
     "clone-stats-node22": "^1.0.1",
+    "github-username": "^8.0.0",
     "latest-version": "^9.0.0",
     "module-alias": "^2.2.3",
     "semver": "^7.6.3",
+    "whatwg-url": "^14.1.0",
     "yeoman-generator": "^7.4.0",
-    "yosay": "^3.0.0",
-    "whatwg-url": "^14.1.0"
+    "yosay": "^3.0.0"
   },
   "scripts": {
     "build": "tsx scripts/build.ts",
