Fix boolean warning

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -21,5 +21,8 @@
     "obsidian-dev-utils": "latest",
     "obsidian-typings": "latest"
   },
+  "overrides": {
+    "boolean": "npm:dry-uninstall"
+  },
   "type": "module"
 }
