--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-obsidian-plugin",
-  "version": "6.7.1-beta.9",
+  "version": "7.0.0",
   "description": "Obsidian Plugin Bootstrap",
   "homepage": "https://github.com/mnaoumov/generator-obsidian-plugin/",
   "author": {
