--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   ],
   "scripts": {
     "build": "tsx scripts/build.ts",
+    "format": "obsidian-dev-utils format",
+    "format:check": "obsidian-dev-utils format:check",
     "lint": "obsidian-dev-utils lint",
     "lint:fix": "obsidian-dev-utils lint:fix",
     "spellcheck": "obsidian-dev-utils spellcheck",
@@ -50,7 +52,7 @@
     "@types/yosay": "^2.0.3",
     "esbuild": "^0.24.2",
     "npm-run-all": "^4.1.5",
-    "obsidian-dev-utils": "^15.0.0",
+    "obsidian-dev-utils": "^16.4.1",
     "tsx": "^4.19.2"
   },
   "engines": {
