--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -8,7 +8,10 @@
   "type": "module",
   "scripts": {
     "build": "obsidian-dev-utils build",
-    "build:validate": "obsidian-dev-utils build:validate",
+    "build:clean": "obsidian-dev-utils build:clean",
+    "build:compile": "obsidian-dev-utils build:compile",
+    "build:compile:svelte": "obsidian-dev-utils build:compile:svelte",
+    "build:compile:typescript": "obsidian-dev-utils build:compile:typescript",
     "dev": "obsidian-dev-utils dev",
     "format": "obsidian-dev-utils format",
     "format:check": "obsidian-dev-utils format:check",
