--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "@types/semver": "^7.5.8",
     "@types/yosay": "^2.0.3",
     "esbuild": "^0.25.1",
+    "jiti": "^2.4.2",
     "npm-run-all": "^4.1.5",
-    "obsidian-dev-utils": "^19.10.0",
+    "obsidian-dev-utils": "^19.16.1",
     "tsx": "^4.19.3"
   },
   "engines": {
