--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,10 @@
     "verbatimModuleSyntax": true
   },
   "include": [
+    "./eslint.config.*ts",
+    "./src/**/*.svelte",
     "./src/**/*.ts",
+    "./src/**/*.tsx",
     "./scripts/**/*.ts"
   ]
 }
