--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "esbuild": "^0.25.2",
     "jiti": "^2.4.2",
     "npm-run-all": "^4.1.5",
-    "obsidian-dev-utils": "^26.7.0",
+    "obsidian-dev-utils": "^26.10.0",
+    "obsidian-typings": "^3.1.0",
     "tsx": "^4.19.3"
   },
   "engines": {
