--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "yosay": "^3.0.0"
   },
   "devDependencies": {
+    "@antfu/utils": "9.2.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/debug": "^4.1.12",
     "@types/json-schema": "^7.0.15",
@@ -61,6 +62,7 @@
     "node": ">=18.0.0"
   },
   "overrides": {
+    "@antfu/utils": "$@antfu/utils",
     "type-fest": "^4.35.0",
     "whatwg-url": "^14.1.0"
   }
