--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "@types/json-schema": "^7.0.15",
     "@types/semver": "^7.7.0",
     "@types/yosay": "^2.0.3",
+    "@yeoman/adapter": "^2.1.1",
     "esbuild": "^0.25.9",
     "jiti": "^2.5.1",
     "npm-run-all": "^4.1.5",
-    "obsidian-dev-utils": "^31.0.0",
-    "obsidian-typings": "^3.16.0",
+    "obsidian-dev-utils": "^33.1.0",
+    "obsidian-typings": "^3.16.6",
     "tsx": "^4.20.4"
   },
   "engines": {
