Add overrides to fix build

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -38,6 +38,8 @@
     "svelte": "latest"
   },
   "overrides": {
-    "boolean": "npm:dry-uninstall"
+    "@antfu/utils": "9.2.0",
+    "boolean": "npm:dry-uninstall",
+    "dompurify": "3.0.1"
   }
 }
